show pointer cursor
add navbar.css into index.html

--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/tasks/tasks.css">
       <link rel="stylesheet" href="components/modal/modal.css">
+      <link rel="stylesheet" href="components/navbar/navbar.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
